# TicTacToe_MinMax_usingCMAkeLists.txt

./: CMakeLists.txt  README.md
include/: cMain.h
src/: cApp.cpp  cMain.cpp
